Added more citation boxes for mobile

--- a/article-discipline/index.html
+++ b/article-discipline/index.html
@@ -80,11 +80,62 @@
 			<p class="bigtext1">“New hybrids of design are emerging. People don’t fit in neat categories; they’re a mixture of artists, engineers, designers, thinkers.”<sup>16</sup></p>
 			<p>This paper posits that the terrain of design practice, education, and research, and its subsequent points of inquiry, are continuing to shift and extend well beyond the boundaries of the (single) discipline. That is, the discipline that was once recognized and acknowledged as design, which was born of the split of idea from manufacture, now has little to do with manufacture and a single idea.</p>
 			<p>Now the idea of design includes multiple disciplinary perspectives (i.e. multidisciplinarity) to cross-disciplinary pursuits, to the get-together of interdisciplinarity to the bricolage of transdisciplinarity and now beyond—to alter-disciplinarity, where globalization and the explosion of digital possibilities has resulted in connections that are no longer ‘in the middle of ...,’ cannot be measured ‘across,’ nor encompass an ‘entire system.’ As such, the digital has generated an ‘other’ dimension, so we might now need to consider ‘alter-disciplinarity’ or ‘undisciplinarity’ as the most effective approach in the research required for a future of design.</p>
+			
+			<details class="citation-div"> <summary><div id="footnotediv"><a>Introduction: Footnotes</a><a id="arrow-foot">&#8595;</a></div></summary>
+				<ul class="citation-list">  
+					<li class="footnotes-list">
+					<li class="footnote-item">
+						<p class="footnote"><sup>7</sup> Latour, B. “A Cautious Prometheus? A Few Steps Toward a Philosophy of Design (With Special Attention to Peter Sloterdijk).” In <i>Proceedings of the 2008 Annual International Conference of the Design History Society</i>, edited by F. Hackne, J. Glynne & V. Minto, pgs. 2-10, 2008.</p>
+					</li>
+					<li class="footnote-item">
+						<p class="footnote"><sup>8</sup> Sudjic, D. <i>The Language of Things: Understanding the World of Desirable Objects</i>. New York, NY, USA: W.W. Norton, 2009.</p>
+					</li>
+					<li class="footnote-item">
+						<p class="footnote"><sup>9</sup> Kimbell, L. “Rethinking Design Thinking: Part I.” <i>Design and Culture</i>, 3.3 (2011): pgs. 285-306.</p>
+					</li>
+					<li class="footnote-item">
+						<p class="footnote"><sup>10</sup> Cross, N. <i>Designerly Ways of Knowing</i>. London, UK: Springer, 2006.</p>
+					</li>
+					<li class="footnote-item">
+						<p class="footnote"><sup>11</sup> Rodgers, P.A. “Design Now.” In <i>Perimeters, Boundaries and Borders,</i> edited by J. Marshall, pgs. 8-11.</p>
+					</li>
+					<li class="footnote-item">
+						<p class="footnote"><sup>12</sup> Schouwenberg, L. and Jongerius, H. <i>Hella Jongerius</i>. London, UK: Phaidon Press Ltd., 2003.</p>
+					</li>
+					<li class="footnote-item">
+						<p class="footnote"><sup>12</sup> Schouwenberg, L. and Jongerius, H. <i>Hella Jongerius</i>. London, UK: Phaidon Press Ltd., 2003.</p>
+					</li>
+					<li class="footnote-item">
+						<p class="footnote"><sup>12</sup> Schouwenberg, L. and Jongerius, H. <i>Hella Jongerius</i>. London, UK: Phaidon Press Ltd., 2003.</p>
+					</li>
+					<li class="footnote-item">
+						<p class="footnote"><sup>13</sup> Bouroullec, R. & Bouroullec, E. <i>Ronan and Erwan Bouroullec</i>. London, UK: Phaidon Press Ltd., 2003.</p>
+					</li>
+					<li class="footnote-item">
+						<p class="footnote"><sup>14</sup> van Hinte, E., ed. 1:1 <i>Marti Guixe</i>. Rotterdam, The Netherlands: 010 Publishers, 2002.</p>
+					</li>
+					<li class="footnote-item">
+						<p class="footnote"><sup>15</sup> Myerson, J. <i>IDEO: Masters of Innovation.</i> London, UK: Laurence King Publishing, 2005.</p>
+					</li><li class="footnote-item">
+						<p class="footnote"><sup>16</sup> West, D. “A New Generation.” <i>ICON</i>, 43 (2007): pgs. 56-64.</p>
+					</li>
+				</details>
 	<section class="normal">
 	<div class="stickytitle"><h3>An Alternative Disciplinary <span id="subtitle-alternative">(‘Alterplinary’) Future Manifesto</span></h3></div>
 			<p class="topspace">As a way forward for the discipline of design, the authors propose an ‘alterplinary’manifesto (a portmanteau of ‘alternative’ and ‘disciplinary’). Alterplinarity is the condition contemporary design finds itself in.<sup>17</sup> The fluid, evolving muddle of practice that regularly cross, exceed and alter historical disciplinary and conceptual boundaries has resulted in research, education, and practice that is constantly shifting, creating, contesting and negotiating new terrains of opportunities and re-shaping the boundaries of design.</p>
 			<p class="bigtext1">This “other” dimension<sup>18</sup> or, as we propose, an “alternative disciplinarity”—an “alterplinarity” that does not rely on historic disciplines of design as the boundaries of our understanding has been superseded.</p>
 			<p>The digital has modified the models of design thought and action, and, as a result, research and practice should transform from a convention domesticated by the academy to a reaction to globalization that is yet to be disciplined.</p>
+		
+			<details class="citation-div"> <summary><div id="footnotediv"><a>Alternative: Footnotes</a><a id="arrow-foot">&#8595;</a></div></summary>
+				<ul class="citation-list">  
+					<li class="footnotes-list">
+					<li class="footnote-item">
+						<p class="footnote"><sup>17</sup> Rodgers, P.A. & Bremner, C. “Alterplinarity—‘Alternative Disciplinarity,’ in Future Art and Design Research Pursuits.” <i>Studies in Material Thinking,</i> 6 (2011).</p>
+					</li>
+					<li class="footnote-item">
+						<p class="footnote"><sup>18</sup> Bourriaud, N. <i>Altermodern</i>. London, UK: Tate Publishing, 2009.</p>
+					</li>
+				</details>
 	<div class="stickytitledark"><h3>This Is The ‘Alterplinary’ Manifesto:</h3></div>
 	<div class="stickytitle3"><h4>01 Dispose Carefully of What You Know</h4></div>
 	<!-- <section class="frontsection"> -->
@@ -184,6 +235,65 @@
 		<p>Therefore, design no longer needs an idea, giving rise to a question vexing all dimensions of design—if the ideal (a representation) no longer needs an idea (what needs to be done), can design (serial digital reproductivity) produce an idea of design? </p>
 		<p>An answer requires knowing what to look for, and perhaps we shouldn’t look at the means of enhancement (talent identification and education), or enhancing the means (augmented digital representation), which both pursue the ideal. If we look from outside the regime, then the ideal designer is playing to a skeptical public (“Nothing seems to be getting better ...”) with little trust in the idea of design (especially since everyone knows what needs to be done).</p>
 		<p>So without an idea of design, the ideal (an imitation of design) is now a fragile media invention with no moral reference. Further, now that the idea of the discipline of design doesn’t seem to exist, and its ideal exists on an other playing field defined by the media—an alternative playing field playing an alterplinary discipline.<sup>36</sup> The net result is the ideal has no feel for the idea, and the idea has no effect on the ideal. If we accept this scenario, we have to ask whether we still participate in the idea of design?</p>
+
+		<details class="citation-div"> <summary><div id="footnotediv"><a>Manifesto: Footnotes</a><a id="arrow-foot">&#8595;</a></div></summary>
+			<ul class="citation-list">  
+				<li class="footnotes-list">
+				<li class="footnote-item">
+					<p class="footnote"><sup>19</sup> Hara, K. <i>Designing Design</i>. Zurich, Switzerland: Lars Muller Verlag, 2007.</p>
+				</li>
+				<li class="footnote-item">
+					<p class="footnote"><sup>20</sup> D’Souza, S. & Renner, D. <i>Not Knowing</i>. London, UK: Lid Publishing, 2014.</p>
+				</li>
+				<li class="footnote-item">
+					<p class="footnote"><sup>21</sup> Ranciere, J. <i>The Ignorant Schoolmaster: Five Lessons in Intellectual Emancipation</i>. California, CA, USA: Stanford University Press, 1991.</p>
+				</li>
+				<li class="footnote-item">
+					<p class="footnote"><sup>22</sup> Huston, T. <i>Teaching What You Don’t Know</i>. Harvard, MA, USA: Harvard University Press, 2012.</p>
+				</li>
+				<li class="footnote-item">
+					<p class="footnote"><sup>23</sup> Warman, M. “Dieter Rams: Apple has Achieved Something I Never Did,” <i>The Telegraph</i>, 7 June, 2011. Online.</p>
+				</li>
+				<li class="footnote-item">
+					<p class="footnote"><sup>24</sup> Rams, D. et al. “The Munich Design Charter.” <i>Design Issues</i>, 8.1 (1991): pgs. 74-77.</p>
+				</li>
+				<li class="footnote-item">
+					<p class="footnote"><sup>25</sup> Winston, A. “UK Government is Starting to take Design Seriously.” <i>Dezeen</i> (blog). 19 November, 2015.</p>
+				</li>
+				<li class="footnote-item">
+					<p class="footnote"><sup>26</sup> Archer, B., Baynes, K. & Roberts, P. <i>A Framework for Design and Design Education: A Reader Containing Key Papers from the 1970s and 80s</i>. Wellesbourne, UK: Design and Technology Association, 2005.</p>
+				</li>
+				<li class="footnote-item">
+					<p class="footnote"><sup>27</sup> Meadows, D.H., Meadows, D.L., Randers, J. & Behrens III., W.W. <i>Limits to Growth</i>. New York, NY, USA: Universe Books, 1972.</p>
+				</li>
+				<li class="footnote-item">
+					<p class="footnote"><sup>28</sup> Zalasiewicz, J. et al., “Are We Now Living in the Anthropocene?” <i>GSA Today</i>, 18.2 (2008): pgs. 4-8.</p>
+				</li>
+				<li class="footnote-item">
+					<p class="footnote"><sup>29</sup> Corcoran, P.L., Moore, C.J. & Jazvac, K. “An anthropogenic marker horizon in the future rock record.” <i>GSA Today</i>, 24.6 (2014): pgs. 4-8.</p>
+				</li>
+				<li class="footnote-item">
+					<p class="footnote"><sup>30</sup> Fry, T. “Design: On the Question of The Imperative.” <i>Design and Culture</i>, 7.3 (2015): pgs. 417-422.</p>
+				</li>
+				<li class="footnote-item">
+					<p class="footnote"><sup>31</sup> Moos, M.A. <i>Marshall McLuhan Essays: Media Research Technology, Art, Communication</i>. London, UK: Routledge, 1997: p. 78.</p>
+				</li>
+				<li class="footnote-item">
+					<p class="footnote"><sup>32</sup> Bateson, G. <i>Steps to an Ecology of Mind</i>. New York, NY, USA: Ballantine Books, 1972.</p>
+				</li>
+				<li class="footnote-item">
+					<p class="footnote"><sup>33</sup> Bremner, C. “Usability.” In <i>Design Dictionary: Perspectives on Design Terminology</i>, edited by T. Marshall & M. Erlhoff, pgs. 425-428. Basel, Switzerland: Birkhauser, 2008.</p>
+				</li>
+				<li class="footnote-item">
+					<p class="footnote"><sup>34</sup> National Institute on Aging. <i>Global Health and Aging</i>, Washington D.C., USA: National Institute on Aging and National Institutes of Health, U.S. Department of Health and Human Services, 2011.</p>
+				</li>
+				<li class="footnote-item">
+					<p class="footnote"><sup>35</sup> Foucault, M. <i>Madness and Civilization: A History of Insanity in the Age of Reason</i>. New York, NY, USA: Pantheon Books, 1971: p. 187.</p>
+				</li>
+				<li class="footnote-item">
+					<p class="footnote"><sup>36</sup> Rodgers, P.A. & Bremner, C. “Exhausting Discipline: Undisciplined and Irresponsible Design.” <i>Architecture and Culture</i>, 1.1 (2013): pgs. 138-158.</p>
+				</li>
+			</details>
 	</section>
 	<div class="stickytitle7"><h3>Conclusion</h3></div>
 	<section class="frontsection5">
@@ -193,43 +303,16 @@
 		<p class="bigtext1">—to imagine change and to answer the unavoidable question—what kind of world do we really want to live in? </p>
 		<p> Contentiously, perhaps, we also propose that we need to object to sustaining everything. Design would be better off rejecting sustainability and concentrating on finding ways of us being together on such a populous planet in such unprecedented proximity staring at many other major crises. As such, design now needs to disrupt, contest, invent, direct, coordinate, respond, provoke and project.</p>
 		<p span id="lastparagraph">The complex and interdependent issues we face today need undisciplined and irresponsible designers who act in productively irresponsible ways. With that stated, we must also endeavor to design with care and remember that, like design, the purpose of care is to affect positively the way we live. Finally, designers need to confront what most of them avoid—the past—and also accept that if design no longer needs an idea, should design still participate in the idea of design?</p>
-	</section>
-</section>
-	<section class="footnote">
-		
-		<p class="footnote"><sup>7</sup> Latour, B. “A Cautious Prometheus? A Few Steps Toward a Philosophy of Design (With Special Attention to Peter Sloterdijk).” In <i>Proceedings of the 2008 Annual International Conference of the Design History Society</i>, edited by F. Hackne, J. Glynne & V. Minto, pgs. 2-10, 2008.</p>
-		<p class="footnote"><sup>8</sup> Sudjic, D. <i>The Language of Things: Understanding the World of Desirable Objects</i>. New York, NY, USA: W.W. Norton, 2009.</p>
-		<p class="footnote"><sup>9</sup> Kimbell, L. “Rethinking Design Thinking: Part I.” <i>Design and Culture</i>, 3.3 (2011): pgs. 285-306.</p>
-		<p class="footnote"><sup>10</sup> Cross, N. <i>Designerly Ways of Knowing</i>. London, UK: Springer, 2006.</p>
-		<p class="footnote"><sup>11</sup> Rodgers, P.A. “Design Now.” In <i>Perimeters, Boundaries and Borders,</i> edited by J. Marshall, pgs. 8-11.</p>
-		<p class="footnote"><sup>12</sup> Schouwenberg, L. and Jongerius, H. <i>Hella Jongerius</i>. London, UK: Phaidon Press Ltd., 2003.</p>
-		<p class="footnote"><sup>13</sup> Bouroullec, R. & Bouroullec, E. <i>Ronan and Erwan Bouroullec</i>. London, UK: Phaidon Press Ltd., 2003.</p>
-		<p class="footnote"><sup>14</sup> van Hinte, E., ed. 1:1 <i>Marti Guixe</i>. Rotterdam, The Netherlands: 010 Publishers, 2002.</p>
-		<p class="footnote"><sup>15</sup> Myerson, J. <i>IDEO: Masters of Innovation.</i> London, UK: Laurence King Publishing, 2005.</p>
-		<p class="footnote"><sup>16</sup> West, D. “A New Generation.” <i>ICON</i>, 43 (2007): pgs. 56-64.</p>
-		<p class="footnote"><sup>17</sup> Rodgers, P.A. & Bremner, C. “Alterplinarity—‘Alternative Disciplinarity,’ in Future Art and Design Research Pursuits.” <i>Studies in Material Thinking,</i> 6 (2011).</p>
-		<p class="footnote"><sup>18</sup> Bourriaud, N. <i>Altermodern</i>. London, UK: Tate Publishing, 2009.</p>
-		<p class="footnote"><sup>19</sup> Hara, K. <i>Designing Design</i>. Zurich, Switzerland: Lars Muller Verlag, 2007.</p>
-		<p class="footnote"><sup>20</sup> D’Souza, S. & Renner, D. <i>Not Knowing</i>. London, UK: Lid Publishing, 2014.</p>
-		<p class="footnote"><sup>21</sup> Ranciere, J. <i>The Ignorant Schoolmaster: Five Lessons in Intellectual Emancipation</i>. California, CA, USA: Stanford University Press, 1991.</p>
-		<p class="footnote"><sup>22</sup> Huston, T. <i>Teaching What You Don’t Know</i>. Harvard, MA, USA: Harvard University Press, 2012.</p>
-		<p class="footnote"><sup>23</sup> Warman, M. “Dieter Rams: Apple has Achieved Something I Never Did,” <i>The Telegraph</i>, 7 June, 2011. Online.</p>
-		<p class="footnote"><sup>24</sup> Rams, D. et al. “The Munich Design Charter.” <i>Design Issues</i>, 8.1 (1991): pgs. 74-77.</p>
-		<p class="footnote"><sup>25</sup> Winston, A. “UK Government is Starting to take Design Seriously.” <i>Dezeen</i> (blog). 19 November, 2015.</p>
-		<p class="footnote"><sup>26</sup> Archer, B., Baynes, K. & Roberts, P. <i>A Framework for Design and Design Education: A Reader Containing Key Papers from the 1970s and 80s</i>. Wellesbourne, UK: Design and Technology Association, 2005.</p>
-		<p class="footnote"><sup>27</sup> Meadows, D.H., Meadows, D.L., Randers, J. & Behrens III., W.W. <i>Limits to Growth</i>. New York, NY, USA: Universe Books, 1972.</p>
-		<p class="footnote"><sup>28</sup> Zalasiewicz, J. et al., “Are We Now Living in the Anthropocene?” <i>GSA Today</i>, 18.2 (2008): pgs. 4-8.</p>
-		<p class="footnote"><sup>29</sup> Corcoran, P.L., Moore, C.J. & Jazvac, K. “An anthropogenic marker horizon in the future rock record.” <i>GSA Today</i>, 24.6 (2014): pgs. 4-8.</p>
-		<p class="footnote"><sup>30</sup> Fry, T. “Design: On the Question of The Imperative.” <i>Design and Culture</i>, 7.3 (2015): pgs. 417-422.</p>
-		<p class="footnote"><sup>31</sup> Moos, M.A. <i>Marshall McLuhan Essays: Media Research Technology, Art, Communication</i>. London, UK: Routledge, 1997: p. 78.</p>
-		<p class="footnote"><sup>32</sup> Bateson, G. <i>Steps to an Ecology of Mind</i>. New York, NY, USA: Ballantine Books, 1972.</p>
-		<p class="footnote"><sup>33</sup> Bremner, C. “Usability.” In <i>Design Dictionary: Perspectives on Design Terminology</i>, edited by T. Marshall & M. Erlhoff, pgs. 425-428. Basel, Switzerland: Birkhauser, 2008.</p>
-		<p class="footnote"><sup>34</sup> National Institute on Aging. <i>Global Health and Aging</i>, Washington D.C., USA: National Institute on Aging and National Institutes of Health, U.S. Department of Health and Human Services, 2011.</p>
-		<p class="footnote"><sup>35</sup> Foucault, M. <i>Madness and Civilization: A History of Insanity in the Age of Reason</i>. New York, NY, USA: Pantheon Books, 1971: p. 187.</p>
-		<p class="footnote"><sup>36</sup> Rodgers, P.A. & Bremner, C. “Exhausting Discipline: Undisciplined and Irresponsible Design.” <i>Architecture and Culture</i>, 1.1 (2013): pgs. 138-158.</p>
-		<p class="footnote"><sup>37</sup> Ibid.</p>
 
+		<details class="citation-div"> <summary><div id="footnotediv"><a>Conclusion: Footnotes</a><a id="arrow-foot">&#8595;</a></div></summary>
+			<ul class="citation-list">  
+				<li class="footnotes-list">
+				<li class="footnote-item">
+					<p class="footnote"><sup>37</sup> Ibid.</p>
+				</li> 
+			</details>
 	</section>
+	
 	<section class="readnext">
 			<h3 span id="readnexttext">Read previous</h3>
 			<a href="../article-factory/index.html"><h2 span id="nextarticle">Graphic Design’s Factory Settings</h2></a>
