Added div to the section paragraph to put grid

--- a/article-discipline/index.html
+++ b/article-discipline/index.html
@@ -41,16 +41,27 @@
 	<!-- Article for The Concept Of The Design Discipline -->
 	 <article>
 	<div class="stickytitle"><h3>Abstract</h3></div>
-	<section class="normal">
-				<p>In their previous work, the authors have demonstrated that the discipline of design has been superseded by a condition where conventionally set design disciplines have dissolved.<sup>1 2 3</sup> In this age where design is typified by fluid, evolving patterns of practice that regularly traverse, transcend and transfigure historical disciplinary and conceptual boundaries, the authors have argued that globalization and the proliferation of the digital has resulted in connections that are no longer ‘amid,’ cannot be measured ‘across,’ nor encompass a ‘whole’ system. In short, this ‘disciplinary turn’ has generated an ‘other’ dimension—an alternative disciplinarity.<sup>4</sup></p>
-				<p>Moreover, this reliance on the ‘exhausted’ historic disciplines has become obsolete as the boundaries of our understanding have been superseded by a boundless space / time that we call ‘alter-plinarity.’<sup>5</sup></p>
-				<p class="bigtext1">The fragmentation of distinct disciplines has shifted creative practice from being ‘discipline-based’ to ‘issue- or project-based.’<sup>6</sup></p>
-				<p>Consequently, this paper presents a manifesto for the future design discipline that emphasizes disposing carefully of what you know, teaching what you do not know whilst always taking design seriously, protecting us from what we want, objecting to sustaining everything, designing without reproach, ensuring that objects are invisible but designed with care and within history whilst exploring design as an idea rather than an ideal.</p></section>
-				<details class="citation-div"> <summary><div id="footnotediv"><a>Abstract: Footnotes</a><a id="arrow-foot">&#8595;</a></div></summary>
-				<ul class="citation-list">  
-					<li class="footnotes-list">
+	<section>
+		<div class="paragraph-withfootnotes">
+			<!-- Left Content -->
+			<div class="paragraphs">
+			  <p>In their previous work, the authors have demonstrated that the discipline of design has been superseded by a condition where conventionally set design disciplines have dissolved.<sup>1 2 3</sup> In this age where design is typified by fluid, evolving patterns of practice that regularly traverse, transcend and transfigure historical disciplinary and conceptual boundaries, the authors have argued that globalization and the proliferation of the digital has resulted in connections that are no longer ‘amid,’ cannot be measured ‘across,’ nor encompass a ‘whole’ system. In short, this ‘disciplinary turn’ has generated an ‘other’ dimension—an alternative disciplinarity.<sup>4</sup></p>
+			  <p>Moreover, this reliance on the ‘exhausted’ historic disciplines has become obsolete as the boundaries of our understanding have been superseded by a boundless space / time that we call ‘alter-plinarity.’<sup>5</sup></p>
+			  <p class="bigtext1">The fragmentation of distinct disciplines has shifted creative practice from being ‘discipline-based’ to ‘issue- or project-based.’<sup>6</sup></p>
+			  <p>Consequently, this paper presents a manifesto for the future design discipline that emphasizes disposing carefully of what you know, teaching what you do not know whilst always taking design seriously, protecting us from what we want, objecting to sustaining everything, designing without reproach, ensuring that objects are invisible but designed with care and within history whilst exploring design as an idea rather than an ideal.</p>
+			</div>
+			<!-- Right Content -->
+			<div class="citationdiv">
+				<details class="citation-div">
+				  <summary>
+					<div id="footnotediv">
+					  <a>Abstract: Footnotes</a>
+					  <a id="arrow-foot">&#8595;</a>
+					</div>
+				  </summary>
+				  <ul class="citation-list">
 					<li class="footnote-item">
-					<p class="footnote"><sup>1</sup> Rodgers, P.A. & Bremner, C. “Alterplinarity—‘Alternative Disciplinarity,’ in Future Art and Design Research Pursuits.” <i>Studies in Material Thinking</i>, 6 (2011).</p>
+					  <p class="footnote"><sup>1</sup> Rodgers, P.A. & Bremner, C. “Alterplinarity—‘Alternative Disciplinarity,’ in Future Art and Design Research Pursuits.” <i>Studies in Material Thinking</i>, 6 (2011).</p>
 					</li>
 					<li class="footnote-item">
 					<p class="footnote"><sup>2</sup> Rodgers, P.A. & Bremner, C. “Exhausting Discipline: Undisciplined and Irresponsible Design.” <i>Architecture and Culture</i>, 1.1 (2013): pgs. 138-158.</p>
@@ -68,6 +79,9 @@
 					<p class="footnote"><sup>6</sup> Heppell, S. “RSA Lectures: Stephen Heppell: Learning 2016,” <i>RSA Lectures</i>, 30 June, 2006. Online. Available at: http://www.teachers.tv/video/4957 (Accessed December 22, 2010).</p>
 					</li>
 				</details>
+			</div>
+		  </div>
+		</section>
 			<section class="normal">
 				<div class="stickytitle"><h3>Introduction</h3></div>
 			<p class="topspace">Since the 1950s, the adoption and application of the word design has been expanding continuously both in type and remit, and now extends from the design of objects and spaces that we use daily to cities, landscapes, nations, cultures, bodies, genes, political systems, and the way we produce food, to the way we travel, build cars and clone sheep.<sup>7</sup> The reach of design has expanded way beyond Ernesto Rogers’ description from “... from the Spoon to the City” (“... dalla cucchiaio alla citta”)<sup>8</sup> to the way we formulate business and, more recently, think.<sup>9</sup></p>
