Organized my css file for discipline article

--- a/article-discipline/index.html
+++ b/article-discipline/index.html
@@ -35,49 +35,46 @@
 				<a href="#top" class="mainlink">&#8593;</a>
 			  </div>
 			</div>
-		  <!-- <div id="backtotop"> -->
-			<!-- <a href="#top" span id="arrow">&#x21E7;</a> -->
-		<!-- </div> -->
 	<!-- Article for The Concept Of The Design Discipline -->
 	 <article>
 	<div class="stickytitle"><h3>Abstract</h3></div>
 	<section>
 		<div class="paragraph-withfootnotes">
-			<!-- Left Content -->
-			<div class="paragraphs">
-			  <p>In their previous work, the authors have demonstrated that the discipline of design has been superseded by a condition where conventionally set design disciplines have dissolved.<sup>1 2 3</sup> In this age where design is typified by fluid, evolving patterns of practice that regularly traverse, transcend and transfigure historical disciplinary and conceptual boundaries, the authors have argued that globalization and the proliferation of the digital has resulted in connections that are no longer ‘amid,’ cannot be measured ‘across,’ nor encompass a ‘whole’ system. In short, this ‘disciplinary turn’ has generated an ‘other’ dimension—an alternative disciplinarity.<sup>4</sup></p>
-			  <p>Moreover, this reliance on the ‘exhausted’ historic disciplines has become obsolete as the boundaries of our understanding have been superseded by a boundless space / time that we call ‘alter-plinarity.’<sup>5</sup></p>
-			  <p class="bigtext1">The fragmentation of distinct disciplines has shifted creative practice from being ‘discipline-based’ to ‘issue- or project-based.’<sup>6</sup></p>
-			  <p>Consequently, this paper presents a manifesto for the future design discipline that emphasizes disposing carefully of what you know, teaching what you do not know whilst always taking design seriously, protecting us from what we want, objecting to sustaining everything, designing without reproach, ensuring that objects are invisible but designed with care and within history whilst exploring design as an idea rather than an ideal.</p>
-			</div>
-			<!-- Right Content -->
-			<div class="citationdiv">
-				<details class="citation-div">
-				  <summary>
-					<div id="footnotediv">
-					  <a>Abstract: Footnotes</a>
-					  <a id="arrow-foot">&#8595;</a>
-					</div>
-				  </summary>
-				  <ul class="citation-list">
-					<li class="footnote-item">
-					  <p class="footnote"><sup>1</sup> Rodgers, P.A. & Bremner, C. “Alterplinarity—‘Alternative Disciplinarity,’ in Future Art and Design Research Pursuits.” <i>Studies in Material Thinking</i>, 6 (2011).</p>
-					</li>
-					<li class="footnote-item">
+		  <!-- Left Content -->
+		  <div class="paragraphs">
+			<p>In their previous work, the authors have demonstrated that the discipline of design has been superseded by a condition where conventionally set design disciplines have dissolved.<sup>1 2 3</sup> In this age where design is typified by fluid, evolving patterns of practice that regularly traverse, transcend and transfigure historical disciplinary and conceptual boundaries, the authors have argued that globalization and the proliferation of the digital has resulted in connections that are no longer ‘amid,’ cannot be measured ‘across,’ nor encompass a ‘whole’ system. In short, this ‘disciplinary turn’ has generated an ‘other’ dimension—an alternative disciplinarity.<sup>4</sup></p>
+			<p>Moreover, this reliance on the ‘exhausted’ historic disciplines has become obsolete as the boundaries of our understanding have been superseded by a boundless space / time that we call ‘alter-plinarity.’<sup>5</sup></p>
+			<p class="bigtext1">The fragmentation of distinct disciplines has shifted creative practice from being ‘discipline-based’ to ‘issue- or project-based.’<sup>6</sup></p>
+			<p>Consequently, this paper presents a manifesto for the future design discipline that emphasizes disposing carefully of what you know, teaching what you do not know whilst always taking design seriously, protecting us from what we want, objecting to sustaining everything, designing without reproach, ensuring that objects are invisible but designed with care and within history whilst exploring design as an idea rather than an ideal.</p>
+		  </div>
+		  <!-- Right Content -->
+		  <div class="citationdiv">
+			<details class="citation-div">
+			  <summary>
+				<div id="footnotediv">
+				  <a>Abstract: Footnotes</a>
+				  <a id="arrow-foot">&#8595;</a>
+				</div>
+			  </summary>
+			  <ul class="citation-list">
+				<li class="footnote-item">
+				  <p class="footnote"><sup>1</sup> Rodgers, P.A. & Bremner, C. “Alterplinarity—‘Alternative Disciplinarity,’ in Future Art and Design Research Pursuits.” <i>Studies in Material Thinking</i>, 6 (2011).</p>
+				</li>
+				<li class="footnote-item">
 					<p class="footnote"><sup>2</sup> Rodgers, P.A. & Bremner, C. “Exhausting Discipline: Undisciplined and Irresponsible Design.” <i>Architecture and Culture</i>, 1.1 (2013): pgs. 138-158.</p>
-					</li>
-					<li class="footnote-item">
+				  </li>
+				  <li class="footnote-item">
 					<p class="footnote"><sup>3</sup> Ibid.</p>
-					</li>
-					<li class="footnote-item">
+				  </li>
+				  <li class="footnote-item">
 					<p class="footnote"><sup>4</sup> Rodgers, P.A. & Bremner, C. “Alterplinarity—‘Alternative Disciplinarity,’ in Future Art and Design Research Pursuits.” <i>Studies in Material Thinking</i>, 6 (2011).</p>
-					</li>
-					<li class="footnote-item">
+				  </li>
+				  <li class="footnote-item">
 					<p class="footnote"><sup>5</sup> Rodgers, P.A. & Bremner, C. “Exhausting Discipline: Undisciplined and Irresponsible Design.” <i>Architecture and Culture</i>, 1.1 (2013): pgs. 138-158.</p>
-					</li>
-					<li class="footnote-item">
-					<p class="footnote"><sup>6</sup> Heppell, S. “RSA Lectures: Stephen Heppell: Learning 2016,” <i>RSA Lectures</i>, 30 June, 2006. Online. Available at: http://www.teachers.tv/video/4957 (Accessed December 22, 2010).</p>
-					</li>
+				  </li>
+				  <li class="footnote-item">
+					<p class="footnote"><sup>6</sup> Heppell, S. “<i>RSA Lectures: Stephen Heppell: Learning 2016,”RSA Lectures</i>, 30 June, 2006. Online. Available at: http://www.teachers.tv/video/4957 (Accessed December 22, 2010).</p>
+				  </li>
 				</details>
 			</div>
 		  </div>
@@ -94,7 +91,7 @@
 			<p class="bigtext1">“New hybrids of design are emerging. People don’t fit in neat categories; they’re a mixture of artists, engineers, designers, thinkers.”<sup>16</sup></p>
 			<p>This paper posits that the terrain of design practice, education, and research, and its subsequent points of inquiry, are continuing to shift and extend well beyond the boundaries of the (single) discipline. That is, the discipline that was once recognized and acknowledged as design, which was born of the split of idea from manufacture, now has little to do with manufacture and a single idea.</p>
 			<p>Now the idea of design includes multiple disciplinary perspectives (i.e. multidisciplinarity) to cross-disciplinary pursuits, to the get-together of interdisciplinarity to the bricolage of transdisciplinarity and now beyond—to alter-disciplinarity, where globalization and the explosion of digital possibilities has resulted in connections that are no longer ‘in the middle of ...,’ cannot be measured ‘across,’ nor encompass an ‘entire system.’ As such, the digital has generated an ‘other’ dimension, so we might now need to consider ‘alter-disciplinarity’ or ‘undisciplinarity’ as the most effective approach in the research required for a future of design.</p>
-			
+
 			<details class="citation-div"> <summary><div id="footnotediv"><a>Introduction: Footnotes</a><a id="arrow-foot">&#8595;</a></div></summary>
 				<ul class="citation-list">  
 					<li class="footnotes-list">
@@ -139,7 +136,7 @@
 			<p class="topspace">As a way forward for the discipline of design, the authors propose an ‘alterplinary’manifesto (a portmanteau of ‘alternative’ and ‘disciplinary’). Alterplinarity is the condition contemporary design finds itself in.<sup>17</sup> The fluid, evolving muddle of practice that regularly cross, exceed and alter historical disciplinary and conceptual boundaries has resulted in research, education, and practice that is constantly shifting, creating, contesting and negotiating new terrains of opportunities and re-shaping the boundaries of design.</p>
 			<p class="bigtext1">This “other” dimension<sup>18</sup> or, as we propose, an “alternative disciplinarity”—an “alterplinarity” that does not rely on historic disciplines of design as the boundaries of our understanding has been superseded.</p>
 			<p>The digital has modified the models of design thought and action, and, as a result, research and practice should transform from a convention domesticated by the academy to a reaction to globalization that is yet to be disciplined.</p>
-		
+
 			<details class="citation-div"> <summary><div id="footnotediv"><a>Alternative: Footnotes</a><a id="arrow-foot">&#8595;</a></div></summary>
 				<ul class="citation-list">  
 					<li class="footnotes-list">
@@ -167,7 +164,7 @@
 		<p>Expert tutors, on the other hand, often expect more than new learners can handle. It is also suggested that novice tutors can better envision the steps that a beginner will take, what kinds of mistakes he or she will make, and which steps he or she may have to repeat.</p>
 		<p>Furthermore, novice tutors are more likely than expert tutors to relate difficult concepts to everyday life, and to make use of common knowledge to facilitate this (i.e., to relate these concepts to things that the learner likely already knows). Given the perilous state design currently finds itself in, teaching what we don’t know may herald a refreshing alternative to design’s historical preoccupation with the modern project.</p>
 	</section>
-	
+
 	<div class="stickytitle4"><h4>03 Take Design Seriously</h4></div>
 		<section class="frontsection2">
 		<p>One could be forgiven for forgetting this, however. We are told by Donald A. Norman (and others) in the Epilogue to his book Emotional Design: Why We Love (or Hate) Everyday Things that we are all designers, yet arguably one of the greatest designers of all time, Dieter Rams, has stated that he is “... troubled by the devaluing of the word design” and that he finds himself</p>
@@ -326,7 +323,7 @@
 				</li> 
 			</details>
 	</section>
-	
+
 	<section class="readnext">
 			<h3 span id="readnexttext">Read previous</h3>
 			<a href="../article-factory/index.html"><h2 span id="nextarticle">Graphic Design’s Factory Settings</h2></a>
