Added root variable for citationdiv width

--- a/article-discipline/index.html
+++ b/article-discipline/index.html
@@ -79,8 +79,11 @@
 			</div>
 		  </div>
 		</section>
-			<section class="normal">
+			<section>
 				<div class="stickytitle"><h3>Introduction</h3></div>
+				<div class="paragraph-withfootnotes">
+					<!-- Left Content -->
+					<div class="paragraphs">
 			<p class="topspace">Since the 1950s, the adoption and application of the word design has been expanding continuously both in type and remit, and now extends from the design of objects and spaces that we use daily to cities, landscapes, nations, cultures, bodies, genes, political systems, and the way we produce food, to the way we travel, build cars and clone sheep.<sup>7</sup> The reach of design has expanded way beyond Ernesto Rogers’ description from “... from the Spoon to the City” (“... dalla cucchiaio alla citta”)<sup>8</sup> to the way we formulate business and, more recently, think.<sup>9</sup></p>
 			<p>With accelerated design activity anticipated well into the 21st century, it is clear that an increasing number of researchers and practitioners across a diverse range of creative and other disciplines routinely regard their methods as rooted in design practice or are using methods, techniques and approaches that could be considered “designerly.”<sup>10</sup> It is equally clear that design is expanding its disciplinary, conceptual, theoretical, and methodological frameworks to encompass ever-wider disciplines, activities and practice.</p>
 			<p class="bigtext1">As a result, design is either copious and being smeared as a viscous layer over the problems of the world, or what we call design is being stretched into an impermeable film expanding to keep in capital and consumption.</p>
@@ -91,10 +94,17 @@
 			<p class="bigtext1">“New hybrids of design are emerging. People don’t fit in neat categories; they’re a mixture of artists, engineers, designers, thinkers.”<sup>16</sup></p>
 			<p>This paper posits that the terrain of design practice, education, and research, and its subsequent points of inquiry, are continuing to shift and extend well beyond the boundaries of the (single) discipline. That is, the discipline that was once recognized and acknowledged as design, which was born of the split of idea from manufacture, now has little to do with manufacture and a single idea.</p>
 			<p>Now the idea of design includes multiple disciplinary perspectives (i.e. multidisciplinarity) to cross-disciplinary pursuits, to the get-together of interdisciplinarity to the bricolage of transdisciplinarity and now beyond—to alter-disciplinarity, where globalization and the explosion of digital possibilities has resulted in connections that are no longer ‘in the middle of ...,’ cannot be measured ‘across,’ nor encompass an ‘entire system.’ As such, the digital has generated an ‘other’ dimension, so we might now need to consider ‘alter-disciplinarity’ or ‘undisciplinarity’ as the most effective approach in the research required for a future of design.</p>
-
-			<details class="citation-div"> <summary><div id="footnotediv"><a>Introduction: Footnotes</a><a id="arrow-foot">&#8595;</a></div></summary>
-				<ul class="citation-list">  
-					<li class="footnotes-list">
+			</div>
+			 <!-- Right Content -->
+			 <div class="citationdiv">
+				<details class="citation-div">
+				  <summary>
+					<div id="footnotediv">
+					  <a>Abstract: Footnotes</a>
+					  <a id="arrow-foot">&#8595;</a>
+					</div>
+				  </summary>
+				  <ul class="citation-list">
 					<li class="footnote-item">
 						<p class="footnote"><sup>7</sup> Latour, B. “A Cautious Prometheus? A Few Steps Toward a Philosophy of Design (With Special Attention to Peter Sloterdijk).” In <i>Proceedings of the 2008 Annual International Conference of the Design History Society</i>, edited by F. Hackne, J. Glynne & V. Minto, pgs. 2-10, 2008.</p>
 					</li>
@@ -131,6 +141,9 @@
 						<p class="footnote"><sup>16</sup> West, D. “A New Generation.” <i>ICON</i>, 43 (2007): pgs. 56-64.</p>
 					</li>
 				</details>
+			</div>
+			</div>
+		</section>
 	<section class="normal">
 	<div class="stickytitle"><h3>An Alternative Disciplinary <span id="subtitle-alternative">(‘Alterplinary’) Future Manifesto</span></h3></div>
 			<p class="topspace">As a way forward for the discipline of design, the authors propose an ‘alterplinary’manifesto (a portmanteau of ‘alternative’ and ‘disciplinary’). Alterplinarity is the condition contemporary design finds itself in.<sup>17</sup> The fluid, evolving muddle of practice that regularly cross, exceed and alter historical disciplinary and conceptual boundaries has resulted in research, education, and practice that is constantly shifting, creating, contesting and negotiating new terrains of opportunities and re-shaping the boundaries of design.</p>
